--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 *.env
+.DS_Store
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -416,3 +417,8 @@ FodyWeavers.xsd
 *.msix
 *.msm
 *.msp
+
+#JetBarins IDE files
+.idea
+**/coverage
+**/TestResults
